fixed grey text contrast on white background

--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ main {
 
 .img-credit {
   font-size: 10px;
-  color: grey;
+  color: #010203;
 }
 
 .card-author-category {
@@ -135,7 +135,7 @@ main {
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 1.1px;
-  color: gray;
+  color: #010203;
 }
 .card-author-name::before {
   content: "|";
